--- a/style.css
+++ b/style.css
@@ -13,24 +13,25 @@ body{
     background-color: #111111;
     color: whitesmoke;
 }
-#home{
+.home{
     width: 100%;
-    height: 100%;
+    height: 8vh;
 }
 #background-blob{
     position: absolute;
-    top: 60vh;
-    left: 20vw;
+    top: 50vh;
+    left: 30vw;
     border-radius: 50%;
-    height: 35vw;
-    width: 35vw;
-    background: linear-gradient(to top right, #fc0c04, #f49c37);
+    height: 25vw;
+    width: 40vw;
+    background: linear-gradient(to top right, purple, navy);
     z-index: 1;
     filter: blur(60px);
-    animation: gola 3s linear infinite alternate;
-  }
+    animation: blob 3s linear infinite alternate;
+    -webkit-animation: blob 3s linear infinite alternate;
+}
   
-  @keyframes gola {
+  @keyframes blob {
     to {
       transform: translate(10%, -10%) skew(-10deg);
     }
