--- a/style.css
+++ b/style.css
@@ -1,15 +1,77 @@
-*{
+@font-face {
+    font-family: bold;
+    src: url("./Assets/fonts/Gilroy-Bold.ttf");
+}
+@font-face {
+    font-family: heavyBold;
+    src: url("./Assets/fonts/Gilroy-Heavy.ttf");
+}
+@font-face {
+    font-family: light;
+    src: url("./Assets/fonts/Gilroy-Light.ttf");
+}  
+@font-face {
+    font-family: regular;
+    src: url("./Assets/fonts/Gilroy-Regular.ttf");
+}
+@font-face {
+    font-family: Medium;
+    src: url("./Assets/fonts/Gilroy-Medium.ttf");
+}
+
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-html,body{
+html,
+body {
     height: 100%;
     width: 100%;
 }
 
-body{
+body {
     background-color: #111111;
     color: whitesmoke;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1.5rem 3rem;
+    font-family: regular;
+    #logoContainer {
+       height: 4rem;
+       width: 4rem;
+       img{
+        height: 100%;
+        width: 100%;
+       }
+    }
+
+    nav {
+        display: flex;
+
+        h4 {
+            color: whitesmoke;
+            text-decoration: none;
+            margin-right: 1rem;
+            cursor: pointer;
+            font-size: 1.2rem;
+        }
+    }
+
+    input[type="text"] {
+        padding: 0.5rem;
+        margin-right: 1rem;
+        border: none;
+        border-radius: 5px;
+        background-color: #333333;
+        color: whitesmoke;
+        font-size: 1rem;
+        transition: background-color 0.3s ease;
+    }
 }
