--- a/style.css
+++ b/style.css
@@ -2,18 +2,22 @@
     font-family: bold;
     src: url("./Assets/fonts/Gilroy-Bold.ttf");
 }
+
 @font-face {
     font-family: heavyBold;
     src: url("./Assets/fonts/Gilroy-Heavy.ttf");
 }
+
 @font-face {
     font-family: light;
     src: url("./Assets/fonts/Gilroy-Light.ttf");
-}  
+}
+
 @font-face {
     font-family: regular;
     src: url("./Assets/fonts/Gilroy-Regular.ttf");
 }
+
 @font-face {
     font-family: Medium;
     src: url("./Assets/fonts/Gilroy-Medium.ttf");
@@ -35,6 +39,7 @@ body {
 body {
     background-color: #111111;
     color: whitesmoke;
+    padding: 0 1rem;
 }
 
 header {
@@ -43,13 +48,15 @@ header {
     justify-content: space-between;
     padding: 1.5rem 3rem;
     font-family: regular;
+    border-bottom: 2px solid rgba(137, 137, 137, 0.752);
     #logoContainer {
-       height: 4rem;
-       width: 4rem;
-       img{
-        height: 100%;
-        width: 100%;
-       }
+        height: 3.5rem;
+        width: 3.5rem;
+
+        img {
+            height: 100%;
+            width: 100%;
+        }
     }
 
     nav {
@@ -60,18 +67,45 @@ header {
             text-decoration: none;
             margin-right: 1rem;
             cursor: pointer;
-            font-size: 1.2rem;
+            font-size: 1.1rem;
+            transition: all ease-in 0.2s;
+            &:hover{
+                color: #7a7a7a;
+            }
         }
+
     }
 
     input[type="text"] {
         padding: 0.5rem;
-        margin-right: 1rem;
+        margin-right: 0.5rem;
         border: none;
         border-radius: 5px;
         background-color: #333333;
         color: whitesmoke;
         font-size: 1rem;
         transition: background-color 0.3s ease;
+    }
+
+    input[type="text"]:focus {
+        background-color: #555555;
+    }
+
+    button {
+        padding: 0.5rem 1rem;
+        border: none;
+        border-radius: 5px;
+        background-color: #333333;
+        color: whitesmoke;
+        cursor: pointer;
+        font-size: 1rem;
+        transition: background-color 0.3s ease;
+
+        &:hover {
+            background-color: #555555;
+        }
+        &:active {
+            background-color: #777777;
+        } 
     }
 }
