--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 }
 
 body {
-    background-color: #111111;
+    background-color: #0C0712;
     color: whitesmoke;
     padding: 0 1rem;
 }
