--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @font-face {
-    font-family: bold;
-    src: url("./Assets/fonts/Gilroy-Bold.ttf");
+    font-family: 'Gilroy Bold';
+    src: url('./Assets/fonts/Gilroy-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
 }
 
 @font-face {
@@ -14,8 +16,11 @@
 }
 
 @font-face {
-    font-family: regular;
-    src: url("./Assets/fonts/Gilroy-Regular.ttf");
+    font-family: 'Gilroy';
+    src: url('./Assets/fonts/Gilroy-Regular.ttf') format('truetype'),
+         url('./Assets/fonts/Gilroy-Bold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
@@ -44,8 +49,27 @@ body {
 
 .home {
     width: 100%;
-    height: 8vh;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
 }
+.home .center-header1 h1{
+    font-family: 'Gilroy Bold', sans-serif;
+    font-weight: 1000;
+    font-size: 5rem;
+    margin-top: 7rem;
+    z-index: 1;
+}
+.home .center-header1 h2{
+    font-family: 'Gilroy', sans-serif;
+    font-weight: 700;
+    font-size: 2rem;
+    margin-top: 1rem;
+    z-index: 1;
+}
+
 
 #background-blob {
     position: absolute;
@@ -55,16 +79,21 @@ body {
     height: 25vw;
     width: 40vw;
     background: linear-gradient(to top right, purple, navy);
-    z-index: 1;
+    z-index: -1;
     filter: blur(60px);
     animation: blob 3s linear infinite alternate;
     -webkit-animation: blob 3s linear infinite alternate;
+    -webkit-filter: blur(60px);
 }
 
 @keyframes blob {
     to {
         transform: translate(10%, -10%) skew(-10deg);
-    }
+        width: 50vw;
+        filter: blur(40px);
+        -webkit-filter: blur(40px);
+        background: linear-gradient(to top right, #860686, #070764);
+}
 }
 
 header {
