--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'Gilroy Bold';
+    font-family: GilroyBold;
     src: url('./Assets/fonts/Gilroy-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
@@ -16,11 +16,8 @@
 }
 
 @font-face {
-    font-family: 'Gilroy';
-    src: url('./Assets/fonts/Gilroy-Regular.ttf') format('truetype'),
-         url('./Assets/fonts/Gilroy-Bold.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+    font-family: Gilroy;
+    src: url('./Assets/fonts/Gilroy-Regular.ttf') format('truetype');
 }
 
 @font-face {
@@ -44,7 +41,7 @@ body {
 body {
     background-color: #0C0712;
     color: whitesmoke;
-    padding: 0 1rem;
+    /* padding: 0 1rem; */
 }
 
 .home {
@@ -52,18 +49,22 @@ body {
     height: 100vh;
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     text-align: center;
 }
-.home .center-header1 h1{
-    font-family: 'Gilroy Bold', sans-serif;
+
+.home .center-header1 h1 {
+    font-family: GilroyBold;
     font-weight: 1000;
     font-size: 5rem;
     margin-top: 7rem;
     z-index: 1;
+    line-height: 4rem;
 }
-.home .center-header1 h2{
-    font-family: 'Gilroy', sans-serif;
+
+.home .center-header1 h2 {
+    font-family: Gilroy;
+    line-height: 2rem;
     font-weight: 700;
     font-size: 2rem;
     margin-top: 1rem;
@@ -94,7 +95,7 @@ body {
         filter: blur(70px);
         -webkit-filter: blur(70px);
         background: linear-gradient(to top left, #d380d3, navy);
-}
+    }
 }
 
 header {
@@ -102,8 +103,12 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 1.5rem 3rem;
-    font-family: regular;
+    font-family: Gilroy;
     border-bottom: 2px solid rgba(118, 118, 118, 0.475);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
 
     #logoContainer {
         height: 3.5rem;
