--- a/style.css
+++ b/style.css
@@ -43,32 +43,64 @@ body {
     color: whitesmoke;
 }
 
-.home {
+.home ,.center-header1{
     width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
+    flex-direction: column;
 }
 
 .home .center-header1 h1 {
     font-family: GilroyBold;
-    font-weight: 1000;
-    font-size: 5rem;
-    margin-top: 7rem;
+    font-weight: bold;
+    font-size: 7rem;
     z-index: 1;
-    line-height: 4rem;
+    line-height: 6.8rem;
+}
+
+.home .center-header1 p{
+    width: 50%;
+    text-align: center;
+    margin-top: 20px;
+    font-family: light;
+    font-weight: 600;
+    font-size: 1.2rem;
 }
 
 .home .center-header1 h2 {
     font-family: Gilroy;
     line-height: 2rem;
     font-weight: 700;
-    font-size: 2rem;
-    margin-top: 1rem;
+    font-size: 1.6rem;
     z-index: 1;
+    margin-bottom: 5px;
+    color: #777777;
 }
+
+.btnContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    gap: 10px;
+    button{
+        background-color: transparent;
+        border: 2px solid rgb(255, 255, 255);
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 20px;
+    }
+}
+
 
 
 #background-blob {
@@ -102,7 +134,6 @@ header {
     justify-content: space-between;
     padding: 1.5rem 3rem;
     font-family: Gilroy;
-    border-bottom: 2px solid rgba(118, 118, 118, 0.475);
     position: fixed;
     top: 0;
     left: 0;
