--- a/style.css
+++ b/style.css
@@ -44,7 +44,15 @@ body {
     overflow: hidden;
 }
 
-.home,
+.home{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-bottom: 1rem solid #ffffff;
+}
 .center-header1 {
     width: 100%;
     height: 100vh;
