--- a/style.css
+++ b/style.css
@@ -41,122 +41,8 @@ body {
 body {
     background-color: #0C0712;
     color: whitesmoke;
-    overflow: hidden;
+    overflow-y: hidden;
     padding: 0 2rem;
-}
-
-.home{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    border-bottom: 2px solid #989898;
-}
-.center-header1 {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    flex-direction: column;
-}
-
-.home .center-header1 h1 {
-    font-family: "GilroyBold";
-    font-weight: bold;
-    font-size: 8rem;
-    z-index: 1;
-    line-height: 6.8rem;
-    letter-spacing: -5px;
-}
-
-.home .center-header1 p {
-    color: #777777;
-    width: 50%;
-    text-align: center;
-    margin-top: 20px;
-    font-family: light;
-    font-weight: 600;
-    font-size: 1.2rem;
-
-    span{
-        color: whitesmoke;
-    }
-}
-
-.home .center-header1 h2 {
-    font-family: Gilroy;
-    line-height: 2rem;
-    font-weight: 700;
-    font-size: 1.6rem;
-    z-index: 1;
-    margin-bottom: 5px;
-    color: #777777;
-    letter-spacing: -1px;
-
-}
-
-.btnContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    gap: 10px;
-
-    button {
-        background-color: transparent;
-        border: 2px solid rgb(255, 255, 255);
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 4px 2px;
-        cursor: pointer;
-        border-radius: 20px;
-    }
-}
-
-
-
-#background-blob {
-    position: absolute;
-    top: 50vh;
-    left: 25vw;
-    border-radius: 50%;
-    height: 25vw;
-    width: 40vw;
-    background: linear-gradient(to top right, rgb(95, 2, 95), navy);
-    z-index: -1;
-    transform: skew(20deg);
-    filter: blur(60px);
-    animation: blob 3s linear infinite alternate;
-    -webkit-animation: blob 3s linear infinite alternate;
-    -webkit-filter: blur(60px);
-}
-
-@keyframes blob {
-    50% {
-        transform: translate(10%, -10%) skew(-20deg);
-        width: 50vw;
-        height: 30vw;
-        filter: blur(70px);
-        -webkit-filter: blur(70px);
-        background: linear-gradient(to top center, #640664, navy);
-    }
-
-    to {
-        transform: translate(10%, -10%) skew(-10deg);
-        width: 40vw;
-        height: 30vw;
-        filter: blur(70px);
-        -webkit-filter: blur(70px);
-        background: linear-gradient(to top left, #742c74, navy);
-    }
 }
 
 header {
@@ -289,7 +175,6 @@ header {
     top: 0;
     padding: 12vw 3vw;
     transform: translateX(100%);
-
     z-index: 99;
 }
 
@@ -328,6 +213,119 @@ header {
     color: #000000;
 }
 
+.home{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-bottom: 2px solid #989898;
+}
+.center-header1 {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+}
+
+.home .center-header1 h1 {
+    font-family: "GilroyBold";
+    font-weight: bold;
+    font-size: 8rem;
+    z-index: 1;
+    line-height: 6.8rem;
+    letter-spacing: -5px;
+}
+
+.home .center-header1 p {
+    color: #777777;
+    width: 50%;
+    text-align: center;
+    margin-top: 20px;
+    font-family: light;
+    font-weight: 600;
+    font-size: 1.2rem;
+
+    span{
+        color: whitesmoke;
+    }
+}
+
+.home .center-header1 h2 {
+    font-family: Gilroy;
+    line-height: 2rem;
+    font-weight: 700;
+    font-size: 1.6rem;
+    z-index: 1;
+    margin-bottom: 5px;
+    color: #777777;
+    letter-spacing: -1px;
+
+}
+
+.btnContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    gap: 10px;
+
+    button {
+        background-color: transparent;
+        border: 2px solid rgb(255, 255, 255);
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 20px;
+    }
+}
+
+
+
+#background-blob {
+    position: absolute;
+    top: 50vh;
+    left: 25vw;
+    border-radius: 50%;
+    height: 25vw;
+    width: 40vw;
+    background: linear-gradient(to top right, rgb(95, 2, 95), navy);
+    z-index: -1;
+    transform: skew(20deg);
+    filter: blur(60px);
+    animation: blob 3s linear infinite alternate;
+    -webkit-animation: blob 3s linear infinite alternate;
+    -webkit-filter: blur(60px);
+}
+
+@keyframes blob {
+    50% {
+        transform: translate(10%, -10%) skew(-20deg);
+        width: 50vw;
+        height: 30vw;
+        filter: blur(70px);
+        -webkit-filter: blur(70px);
+        background: linear-gradient(to top center, #640664, navy);
+    }
+
+    to {
+        transform: translate(10%, -10%) skew(-10deg);
+        width: 40vw;
+        height: 30vw;
+        filter: blur(70px);
+        -webkit-filter: blur(70px);
+        background: linear-gradient(to top left, #742c74, navy);
+    }
+}
 
 @media (max-width: 1200px) {
     .home .center-header1 h1 {
