--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
 body {
     background-color: #0C0712;
     color: whitesmoke;
-    overflow-y: hidden;
+    overflow-x: hidden;
     padding: 0 2rem;
 }
 
@@ -325,6 +325,12 @@ header {
         -webkit-filter: blur(70px);
         background: linear-gradient(to top left, #742c74, navy);
     }
+}
+
+.second{
+    width: 100%;
+    height: 100vh;
+    background-color: ;
 }
 
 @media (max-width: 1200px) {
