--- a/style.css
+++ b/style.css
@@ -327,10 +327,9 @@ header {
     }
 }
 
-.second{
+#second{
     width: 100%;
     height: 100vh;
-    background-color: ;
 }
 
 @media (max-width: 1200px) {
