--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
 body {
     background-color: #0C0712;
     color: whitesmoke;
-    overflow: hidden;
+    overflow-x: hidden;
     padding: 0 2rem;
 }
 
