--- a/style.css
+++ b/style.css
@@ -34,7 +34,9 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+::-webkit-scrollbar{
+    display: none;
+}
 html,body{
     height: 100%;
     width: 100%;
