--- a/style.css
+++ b/style.css
@@ -46,8 +46,27 @@ body {
     font-family: 'Gilroy', sans-serif;
 }
 details > summary {
+    display: flex;
     list-style: none;
 }
+summary::after {
+    content: '';
+    width: 23px;
+    height: auto;
+    background: url('./Assets/photos/down-arrow.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-left: .3em;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+}
+details[open] > summary::after {
+    transform: rotate(180deg);
+  }
+
 details > summary::-webkit-details-marker {
     display: none;
 }
