--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ html,body{
 body {
     font-family: 'Gilroy', sans-serif;
 }
-details > summary {
+/* details > summary {
     display: flex;
     list-style: none;
 }
@@ -69,7 +69,45 @@ details[open] > summary::after {
 
 details > summary::-webkit-details-marker {
     display: none;
+} */
+
+/* Sidebar */
+/* #full {
+    transition: transform 0.3s ease;
+    background-color: #17151a;
+} */
+
+/* Reset for details and summary */
+details {
+    margin: 0;
+    padding: 0;
 }
+summary {
+    list-style: none;
+    padding: 0.5rem 0;
+    cursor: pointer;
+}
+
+/* Styling Summary */
+summary {
+    color: purple;
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center;
+}
+summary::after {
+    content: '';
+    width: 16px;
+    height: 16px;
+    background: url('./Assets/photos/down-arrow.png') no-repeat center;
+    background-size: contain;
+    margin-left: 0.5rem;
+    transition: transform 0.3s;
+}
+details[open] > summary::after {
+    transform: rotate(180deg);
+}
+
 
 @keyframes blob {
     50% {
