--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face{
+    font-family: font0;
+    src: url("./Assets/fonts/NeueHaasDisplayRoman.ttf");
+}
+
 @font-face {
     font-family: font1;
     src: url('./Assets/fonts/Gilroy-Bold.ttf') format('truetype');
